--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_lookbooks.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_lookbooks.scss
@@ -8,5 +8,10 @@
 }
 
 .lookbooks-single {
-  
+  .lookbooks-single_hero {
+    height: 620px;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+  }
 }
