--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
@@ -1,16 +1,18 @@
 
 .sticky-promo-cta-wrapper {
   position: fixed;
-  //top: auto;
   bottom: 0;
   right: 0;
-  z-index: 90;
+  z-index: -999;
   opacity: 0;
+  pointer-events: none;
   transition: all .2s ease;
   text-align: center;
-  //margin-top: -150px;
-  &:hover {
+  transition: opacity 2s ease;
+  &.fadeIn {
     opacity: 1;
+    pointer-events: auto;
+    z-index: 90;
   }
   &.sticky-rotate {
     right: -30px;
@@ -67,7 +69,10 @@
 
   .duck-front-page-top-categories {
     text-align: center;
-    padding: 40px 0 80px 0;
+    padding: 0 0 80px 0;
+    @include media-breakpoint-up(md) {
+      padding: 40px 0 80px 0;
+    }
     .duck-front-page-top-category {
       display: block;
       padding: 50px;
