--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_our-story.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_our-story.scss
@@ -12,13 +12,19 @@
     }
   }
   .our-story-second-section {
-    background: #D8D8D8;
+    background-color: #D8D8D8;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
     padding: 30px 0 20px 0;
     @include media-breakpoint-up(sm) {
       padding: 60px 0 40px 0;
     }
     @include media-breakpoint-up(md) {
-      padding: 100px 0;
+      padding: 120px 0;
+    }
+    p {
+      margin: 0;
     }
   }
   .our-story-third-section {
