--- a/wp-content/themes/duck-and-cover/assets/sass/navigation/_menu.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/navigation/_menu.scss
@@ -80,18 +80,20 @@ $sub-menu-padding-narrow: 25px;
     .sub-menu, .children {
       @extend .menu-vertical;
       position: absolute;
-      z-index: 1010;
+      z-index: -1;
       opacity: 0;
+      transform: translateY(-100%);
       visibility: hidden;
-      @include transition(opacity 0.5s, top 0.5s, left 0.5s, right 0.5s);
+      @include transition(transform 0.2s ease);
     }
   }
 
   .menu-item:hover > .sub-menu,
   li:hover > .children {
+    transform: translateY(0);
     visibility: visible;
     opacity: 1;
-    z-index: 1020;
+    z-index: -1 !important;
   }
 
   // ---------- Narrow ----------
@@ -461,7 +463,7 @@ $sub-menu-padding-narrow: 25px;
   // Level 1
   & > .menu-item,
   & > ul > li {
-    padding: 20px 0;
+    padding: 25px 0;
     line-height: 12px;
 
     // &:not(:last-child):after {
@@ -504,16 +506,19 @@ $sub-menu-padding-narrow: 25px;
   // Sub Menu
   & > .menu-item .sub-menu,
   & > ul > li .children {
-    border-width: 1px;
-    border-style: solid;
-    border-color: #fff !important;
-    column-count: 2;
-    -webkit-column-count: 2;
-    -moz-column-count: 2;
+    border: none;
+    width: 100%;
+    position: fixed;
+    top: 71px;
+    left: 0;
+    right: 0;
+    text-align: center;
+    padding: 27px 40px;
+    background: rgba(255,255,255,.8);
+    display: table;
+    table-layout: fixed;
     & > li {
-      -webkit-column-break-inside: avoid;
-      page-break-inside: avoid;
-      break-inside: avoid;
+      display: table-cell;
     }
   }
 }
