--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
@@ -69,9 +69,9 @@
 
   .duck-front-page-top-categories {
     text-align: center;
-    padding: 0 0 80px 0;
+    padding: 80px 0;
     @include media-breakpoint-up(md) {
-      padding: 40px 0 80px 0;
+      padding: 40px 0 36px 0;
     }
     .duck-front-page-top-category {
       display: block;
