--- a/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/duck/_front-page.scss
@@ -141,6 +141,7 @@
         }
         p {
           font-style: italic;
+          font-size: 14px;
         }
         @include media-breakpoint-up(md) {
           max-width: 60%;
