--- a/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_archive-product.scss
+++ b/wp-content/themes/duck-and-cover/assets/sass/woocommerce/_archive-product.scss
@@ -4,7 +4,8 @@
     padding-right: 20px;
 }
 .woocommerce-ordering {
-    display: inline-block;
+    //display: inline-block;
+    display: none;
     .orderby {
         height: auto;
         padding: 0;
